<resources>
    <string name="app_name">TripLens</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="no_posts_yet">You haven\'t posted anything yet.</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="delete_post_message">Are you sure you want to delete this post? This action cannot be undone.</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="post_deleted">Post deleted successfully</string>
    <string name="update">Update</string>
    <string name="edit_post">Edit Post</string>

    <!-- Branded Snackbar messages -->
    <string name="post_created">Post Created Successfully</string>
    <string name="post_updated">Post Updated Successfully</string>
    <string name="logged_out_message">Logged Out</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="max_images_warning">Max %d images allowed</string>
    <string name="create_new_post">Create New Post</string>
    <string name="welcome_traveler">Welcome Traveler</string>
    <string name="login_subtitle">Enter your credentials to access your account</string>
    <string name="register_subtitle">Sign up to start sharing your travel experiences</string>
    <string name="app_tagline">Capture and share your travel moments</string>
    <string name="click_to_upload">Click to upload images</string>
    <string name="short_description">Short Description</string>
    <string name="detailed_description">Detailed Description</string>
    <string name="destination_country">Destination Country</string>
</resources>
